# qwen3-asr-realtime-studio

./: .dockerignore  .env.example  .gitattributes  .gitignore  CURRENT_HANDOFF_2026-07-16.md  Dockerfile  README.md  RUNPOD_REALTIME_HANDOFF.md  drizzle.config.ts  eslint.config.js  index.html  package-lock.json  package.json  railway.json  tsconfig.json  tsconfig.server.json  vite.config.ts  vitest.config.ts  vitest.postgres.config.ts
services/runpod-worker/: .dockerignore  Dockerfile  README.md  STREAM_SAFETY.md  pyproject.toml  requirements.diarizer.in
services/runpod-worker/config/: models.lock.json  service.env.example
services/runpod-worker/scripts/: benchmark_load.py  bootstrap_lab_batch.py  bootstrap_models.py  bootstrap_server.py  build_catalog.py  entrypoint.sh  evaluate_gate.py  healthcheck.py  merge_gate.py  preflight.py  run_all.sh  run_lab_batch.sh  run_service.sh  score_evaluation.py  smoke_client.py  smoke_diarizer.py
services/runpod-worker/src/qwen_realtime/: __init__.py  alignment.py  app.py  asr.py  audio.py  catalog.py  config.py  diarization.py  diarizer_sidecar.py  engine.py  evaluation.py  gpu.py  lab_batch.py  metrics.py  (+6 more)
services/runpod-worker/tests/: test_alignment.py  test_app.py  test_asr.py  test_bootstrap_lab_batch.py  test_catalog.py  test_config.py  test_diarization_load.py  test_diarization_streaming.py  test_diarizer_sidecar.py  test_engine.py  test_evaluation.py  test_gpu.py  test_lab_batch.py  test_models.py  test_preflight.py  test_runpod_deploy_artifacts.py  test_scheduler.py  test_security.py  test_stability.py  test_vad.py
(+118 files in other folders)
