[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "qwen3-asr-realtime"
version = "0.2.0"
description = "Portable authenticated RunPod worker for low-latency Japanese ASR"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "huggingface-hub>=0.36,<1",
  "httpx>=0.28,<1",
  "numpy>=1.26,<3",
  "prometheus-client>=0.21,<1",
  "pydantic>=2.8,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
gpu = [
  "qwen-asr==0.0.6",
  "vllm[audio]==0.14.0",
  "silero-vad==6.2.1",
]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
  "scipy>=1.12,<2",
  "soundfile>=0.12,<1",
  "websockets>=14,<16",
]

[project.scripts]
qwen-realtime = "qwen_realtime.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_realtime"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
